fix: ensure z-index is consistently applied to Navbar for proper layering

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -11,6 +11,7 @@ nav {
   width: 100%;
   padding: 1.5rem 4rem;
   background-color: $dark-gray;
+  z-index: 99;
 
   h2 {
     font-family: $font-cinzel;
